# Bank-Widget

./: .env.example  .gitignore  README.md  pyproject.toml
output/: main_page.json
src/: api_search.py  events.py  events_page.py  main.py  main_page.py  reports.py  search.py  services.py  sorting.py  utils.py  views.py
tests/: conftest.py  test_api_search.py  test_events.py  test_events_page.py  test_main_page.py  test_reports.py  test_search.py  test_services.py  test_sorting.py  test_views.py
