[tool.poetry]
name = "course-1"
version = "0.1.0"
description = ""
authors = ["Mark Volkov <markasch67@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 119
exclude = '''
(\.git)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
