[tool.poetry]
name = "course-1"
version = "0.1.0"
description = ""
authors = ["Mark Volkov <markasch67@gmail.com>"]
readme = "README.md"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
isort = "^6.0.0"
mypy = "^1.14.1"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[tool.black]
line-length = 119
exclude = '''
(\.git)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv|tests'

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
